# rlsgate

./: .gitignore  CLAUDE.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
skill/: SKILL.md
src/rlsgate/: __init__.py  cli.py  context.py  discover.py  findings.py  fix.py  gitinfo.py  model.py  report.py  scanner.py  sql.py
src/rlsgate/rules/: __init__.py  _common.py  anon_access.py  exposed_secrets.py  public_bucket.py  rls_authenticated.py  rls_disabled.py  unverified_webhook.py
tests/: test_cli.py  test_codex_fixes.py  test_common.py  test_git_aware.py  test_model.py  test_scanner.py  test_sql.py
tests/fixtures/bad/: .env
tests/fixtures/bad/app/api/stripe/webhook/: route.ts
tests/fixtures/bad/src/lib/: admin.ts
tests/fixtures/bad/supabase/migrations/: 0001_init.sql
tests/fixtures/good/: .env.example
tests/fixtures/good/app/api/stripe/webhook/: route.ts
tests/fixtures/good/src/lib/: db.ts
tests/fixtures/good/supabase/migrations/: 0001_init.sql
