[project]
name = "rlsgate"
version = "0.1.0"
description = "The Supabase deploy-gate that runs where you vibe-code — block the RLS and secret leaks before deploy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Penguin Alley", email = "hello@penguinalley.com" }]
requires-python = ">=3.9"
keywords = ["supabase", "rls", "security", "vibe-coding", "ci", "pre-deploy", "row-level-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
# AI-drafted fix snippets are opt-in; the scanner is fully deterministic without them.
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/GerardoRdz96/rlsgate"
Source = "https://github.com/GerardoRdz96/rlsgate"

[project.scripts]
rlsgate = "rlsgate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlsgate"]

[tool.hatch.build.targets.sdist]
# Ship a clean source distribution — the package + docs only. The test fixtures include
# deliberately-fake secret samples (a bad/.env) that have no business on PyPI.
only-include = ["src/rlsgate", "README.md", "LICENSE", "skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
